--- a/Voron2_MKS_GEN_L_config.cfg
+++ b/Voron2_MKS_GEN_L_config.cfg
@@ -177,13 +177,13 @@ homing_positive_dir: true
 ## Z MCU - In X Position
 ## Z0 Stepper - Front Left
 [stepper_z]
-step_pin: PF0
-dir_pin: !PF1
-enable_pin: !PD7
+step_pin: z:PF0
+dir_pin: !z:PF1
+enable_pin: !z:PD7
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
-endstop_pin:^PE5 #X-Min, PE4:X-Max
+endstop_pin:^z:PE5 #X-Min, z:PE4:X-Max
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
@@ -218,9 +218,9 @@ homing_retract_dist: 3
 ##	Z MCU - In Y Position
 ##	Z1 Stepper - Rear Left
 [stepper_z1]
-step_pin: PF6
-dir_pin: !PF7
-enable_pin: !PF2
+step_pin: z:PF6
+dir_pin: !z:PF7
+enable_pin: !z:PF2
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
@@ -237,9 +237,9 @@ microsteps: 16
 ##	Z MCU - In Z Position
 ##	Z2 Stepper - Rear Right
 [stepper_z2]
-step_pin: PL3
-dir_pin: PL1
-enable_pin: !PK0
+step_pin: z:PL3
+dir_pin: z:PL1
+enable_pin: !z:PK0
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
@@ -256,9 +256,9 @@ microsteps: 16
 ##	Z MCU - In E0 Position
 ##	Z3 Stepper - Front Right
 [stepper_z3]
-step_pin: PA4
-dir_pin: !PA6
-enable_pin: !PA2
+step_pin: z:PA4
+dir_pin: !z:PA6
+enable_pin: !z:PA2
 rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
@@ -328,9 +328,9 @@ pid_kd = 131.721
 
 [heater_bed]
 ##	SSR Pin - Z board, Fan Pin
-heater_pin: PH5
+heater_pin: z:PH5
 sensor_type: NTC 100K beta 3950
-sensor_pin: PK
+sensor_pin: z:PK
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
 min_temp: 0
@@ -375,8 +375,7 @@ heater_temp: 50.0
 #fan_speed: 1.0
 
 [fan]
-##	Print Cooling Fan - XYE board, Fan Pin
-pin: PH6
+pin: PH5
 kick_start_time: 0.5
 ##	Depending on your fan, you may need to increase this value
 ##	if your fan will not start. Can change cycle_time (increase)
@@ -385,14 +384,14 @@ off_below: 0.10
 
 [heater_fan controller_fan]
 ##	Controller fan - Z board, HE1 Connector
-pin: z:P2.4
+pin: z:PH6
 kick_start_time: 0.5
 heater: heater_bed
 heater_temp: 45.0
 
 #[heater_fan exhaust_fan]
-##	Exhaust fan - Z board, HE0 Connector
-#pin: z:P2.7
+##	Exhaust fan - Z board, HE0 Connector (Use HEATER_BED Connector)
+#pin: z:PH5
 #max_power: 1.0
 #shutdown_speed: 0.0
 #kick_start_time: 5.0
