--- a/Voron2_MKS_GEN_L_config.cfg
+++ b/Voron2_MKS_GEN_L_config.cfg
@@ -330,7 +330,7 @@ pid_kd = 131.721
 ##	SSR Pin - Z board, Fan Pin
 heater_pin: z:PH5
 sensor_type: NTC 100K beta 3950
-sensor_pin: z:PK
+sensor_pin: z:PK6
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
 min_temp: 0
@@ -349,7 +349,7 @@ pid_kd: 363.769
 ##	This probe is not used for Z height, only Quad Gantry Leveling
 ##	Z_MAX on mcu_z
 ##	If your probe is NO instead of NC, change pin to !^z:P0.10
-pin: ^z:PD2
+pin: z:PD2
 x_offset: 0
 y_offset: 25.0
 z_offset: 0
