--- a/Voron2_MKS_GEN_L_config.cfg
+++ b/Voron2_MKS_GEN_L_config.cfg
@@ -391,7 +391,7 @@ heater_temp: 45.0
 
 #[heater_fan exhaust_fan]
 ##	Exhaust fan - Z board, HE0 Connector (Use HEATER_BED Connector)
-#pin: z:PH5
+#pin: z:P
 #max_power: 1.0
 #shutdown_speed: 0.0
 #kick_start_time: 5.0
