Update and rename debug record.txt to debug record.cfg

--- a/debug record.cfg
+++ b/debug record.cfg
@@ -8,7 +8,7 @@ https://docs.vorondesign.com/build/electrical/
 
 [List serial port]
 
-in cmd line: 
+in cmd line: (because MKS GEN L has the same USB serial id in linux, so we have to use path to distinguish two boards)
 original cmd: ls -l /dev/serial/by-id/
 change it to: ls -l /dev/serial/by-path/
 
