--- a/debug record.cfg
+++ b/debug record.cfg
@@ -12,4 +12,5 @@ in cmd line: (because MKS GEN L has the same USB serial id in linux, so we have 
 original cmd: ls -l /dev/serial/by-id/
 change it to: ls -l /dev/serial/by-path/
 
-
+[Silicone Brush Nozzle Scrubber for Voron 2.4]
+https://www.prusaprinters.org/prints/109349-silicone-brush-nozzle-scrubber-for-voron-24
