Update FYSTEC mini 12864.cfg

--- a/FYSTEC mini 12864.cfg
+++ b/FYSTEC mini 12864.cfg
@@ -1,5 +1,5 @@
 ######################################################################
-# MKS Mini 12864Panel v3.x (with neopixel backlight leds)
+# FYSTEC Mini 12864Panel (with neopixel backlight leds)
 ######################################################################
 
 [display]
